Add main menu animation + logo redirect to index.html

--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <div id="side-menu">
+      <h1>whatever</h1>
+    </div>
     <header>
       <div id="menu-icon">
-        <div class="menu-icon-line"></div>
-        <div class="menu-icon-line"></div>
-        <div class="menu-icon-line"></div>
+        <div id="line-1"></div>
+        <div id="line-2"></div>
+        <div id="line-3"></div>
       </div>
-      <img src="./img/logo.jpg" alt="logo.jpg" />
+      <img id="logo" src="./img/logo.jpg" alt="logo.jpg" />
       <div id="current-page-info">
         <h1>HOME</h1>
       </div>
