Add logo + favicon and center header

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <head>
     <meta charset="utf-8" />
     <meta author="Jedrzej Golebiewski" />
-    <title></title>
+    <title>Page about myself</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="./img/favicon/favicon.ico" type="image/icon">
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap"
       rel="stylesheet"
@@ -15,7 +16,12 @@
   </head>
   <body>
     <div id="side-menu">
-      <h1>whatever</h1>
+      <div id="anchor-tags" style="visibility: hidden;">
+      <a href="./index.html">test1</a>
+      <a href="./index.html">test2</a>
+      <a href="./index.html">test3</a>
+      <a href="./index.html">test4</a>
+    </div>
     </div>
     <header>
       <div id="menu-icon">
@@ -23,7 +29,7 @@
         <div id="line-2"></div>
         <div id="line-3"></div>
       </div>
-      <img id="logo" src="./img/logo.jpg" alt="logo.jpg" />
+      <img id="logo" src="./img/logo_transparent.png" alt="logo" />
       <div id="current-page-info">
         <h1>HOME</h1>
       </div>
