Add menu links animation

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta author="Jedrzej Golebiewski" />
     <title>Page about myself</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="./img/favicon/favicon.ico" type="image/icon">
+    <link rel="icon" href="./img/favicon/favicon.ico" type="image/icon" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap"
       rel="stylesheet"
@@ -16,12 +16,14 @@
   </head>
   <body>
     <div id="side-menu">
-      <div id="anchor-tags" style="visibility: hidden;">
-      <a href="./index.html">test1</a>
-      <a href="./index.html">test2</a>
-      <a href="./index.html">test3</a>
-      <a href="./index.html">test4</a>
-    </div>
+      <div id="anchor-tags">
+        <a href="./index.html">HOME</a>
+        <a href="./degree-programme.html">MY DEGREE<br>PROGRAMME</a>
+        <a href="./quiz.html">QUIZ PAGE</a>
+        <a href="./data-js.html">DATA/JS</a>
+        <a href="./contact-me.html">CONTACT ME</a>
+        <a href="./accessibility.html">ACCESSIBILITY</a>
+      </div>
     </div>
     <header>
       <div id="menu-icon">
