--- a/contact-me.html
+++ b/contact-me.html
@@ -32,7 +32,7 @@
         <div id="line-3"></div>
       </div>
       <img id="logo" src="./img/logo_transparent.png" alt="logo" />
-        <h1 id="current-page-info">HOME</h1>
+        <h1 id="current-page-info">CONTACT ME</h1>
     </header>
     <main>
       <section>
