Add current page highlighting on link menu

--- a/data-js.html
+++ b/data-js.html
@@ -17,12 +17,12 @@
   <body>
     <div id="side-menu">
       <div id="anchor-tags">
-        <a href="./index.html">HOME</a>
-        <a href="./degree-programme.html">MY DEGREE<br>PROGRAMME</a>
-        <a href="./quiz.html">QUIZ PAGE</a>
-        <a href="./data-js.html">DATA/JS</a>
-        <a href="./contact-me.html">CONTACT ME</a>
-        <a href="./accessibility.html">ACCESSIBILITY</a>
+        <a href="./index.html" id="index">HOME</a>
+        <a href="./degree-programme.html" id="degree-programme">MY DEGREE<br>PROGRAMME</a>
+        <a href="./quiz.html" id="quiz">QUIZ PAGE</a>
+        <a href="./data-js.html" id="data-js">DATA/JS</a>
+        <a href="./contact-me.html" id="contact-me">CONTACT ME</a>
+        <a href="./accessibility.html" id="accessibility">ACCESSIBILITY</a>
       </div>
     </div>
     <header>
@@ -32,7 +32,6 @@
         <div id="line-3"></div>
       </div>
       <img id="logo" src="./img/logo_transparent.png" alt="logo" />
-        <h1 id="current-page-info">DATA/JS</h1>
     </header>
     <main>
       <section>
