Create seperate .js and .css files for each .html file + do a few micro tweaks

--- a/data.html
+++ b/data.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/normalize.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/data.css" />
   </head>
   <body>
     <div id="side-menu">
@@ -20,7 +20,7 @@
         <a href="./index.html" id="index">HOME</a>
         <a href="./degree-programme.html" id="degree-programme">MY DEGREE<br>PROGRAMME</a>
         <a href="./quiz.html" id="quiz">QUIZ PAGE</a>
-        <a href="./data-js.html" id="data-js">DATA/JS</a>
+        <a href="./data.html" id="data">DATA/JS</a>
         <a href="./contact-me.html" id="contact-me">CONTACT ME</a>
         <a href="./accessibility.html" id="accessibility">ACCESSIBILITY</a>
       </div>
@@ -51,6 +51,6 @@
     <footer>
       <p id="copyright">© Jedrzej Golebiewski</p>
     </footer>
-    <script src="./js/script.js"></script>
+    <script src="./js/data.js"></script>
   </body>
 </html>
