--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/normalize.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
     <div id="side-menu">
@@ -20,7 +20,7 @@
         <a href="./index.html" id="index">HOME</a>
         <a href="./degree-programme.html" id="degree-programme">MY DEGREE<br>PROGRAMME</a>
         <a href="./quiz.html" id="quiz">QUIZ PAGE</a>
-        <a href="./data-js.html" id="data-js">DATA/JS</a>
+        <a href="./data.html" id="data">DATA/JS</a>
         <a href="./contact-me.html" id="contact-me">CONTACT ME</a>
         <a href="./accessibility.html" id="accessibility">ACCESSIBILITY</a>
       </div>
@@ -35,8 +35,8 @@
     </header>
     <main>
       <section>
-        <img src="./img/temp.jpg" alt="temp.jpg" />
-        <h1>Lorem ipsum dolor</h1>
+        <img id="profile-picture" src="./img/profile_picture.png" alt="Picture Of Me" />
+        <h1 id="name">Jedrzej Golebiewski</h1>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -51,6 +51,6 @@
     <footer>
       <p id="copyright">© Jedrzej Golebiewski</p>
     </footer>
-    <script src="./js/script.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
