--- a/accessibility.html
+++ b/accessibility.html
@@ -8,17 +8,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="./img/favicon/favicon.ico" type="image/icon" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/header-footer-nav.css" />
     <link rel="stylesheet" href="./css/accessibility.css" />
   </head>
   <body>
     <div id="side-menu">
       <div id="anchor-tags">
         <a href="./index.html" id="index">HOME</a>
-        <a href="./degree-programme.html" id="degree-programme">MY DEGREE<br>PROGRAMME</a>
+        <a href="./degree-programme.html" id="degree-programme"
+          >MY DEGREE<br />PROGRAMME</a
+        >
         <a href="./quiz.html" id="quiz">QUIZ PAGE</a>
         <a href="./data.html" id="data">DATA/JS</a>
         <a href="./contact-me.html" id="contact-me">CONTACT ME</a>
@@ -31,6 +34,7 @@
         <div id="line-2"></div>
         <div id="line-3"></div>
       </div>
+      <h1 id="page-title-info">ACCESSIBILITY</h1>
       <img id="logo" src="./img/logo_transparent.png" alt="logo" />
     </header>
     <main>
@@ -51,6 +55,7 @@
     <footer>
       <p id="copyright">© Jedrzej Golebiewski</p>
     </footer>
+    <script src="./js/header-footer-nav.js"></script>
     <script src="./js/accessibility.js"></script>
   </body>
 </html>
