Add home page content, change title property of all html files, do minor .css tweaks

--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
   <head>
     <meta charset="utf-8" />
     <meta author="Jedrzej Golebiewski" />
-    <title>Page about myself</title>
+    <title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="./img/favicon/favicon.ico" type="image/icon" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/header-footer-nav.css" />
     <link rel="stylesheet" href="./css/index.css" />
@@ -39,20 +36,24 @@
     </header>
     <main>
       <section>
+        <h1 id="welcome">Welcome!</h1>
         <img
           id="profile-picture"
           src="./img/profile_picture.png"
           alt="Picture Of Me"
         />
-        <h1 id="name">Jedrzej Golebiewski</h1>
+        <h2 id="name">Jedrzej Golebiewski</h1>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          Yep. That's my name and this is my website :)
+        </p>
+        <div id="about-me-images">
+        <img class="about-me-image" src="./img/neural_network.png" alt="Image Of Neural Network">
+        <img class="about-me-image" src="./img/HTML_tag.png" alt="Image Of HTML Tag">
+      </div>
+        <p>
+          I'm a first year AI & Computer Science student at The University Of Sheffield.
+          Technology and science together with business are only some of the many things that I'm passionate about.
+          In my free time I love to play chess and develop computer software.
         </p>
       </section>
     </main>
