--- a/degree-programme.html
+++ b/degree-programme.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta author="Jedrzej Golebiewski" />
-    <title>Page about myself</title>
+    <title>Degree Programme</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="./img/favicon/favicon.ico" type="image/icon" />
     <link
