Fix issue with side menu obstructing screen and add a bit of content to contact page

--- a/contact-me.html
+++ b/contact-me.html
@@ -15,19 +15,18 @@
     <link rel="stylesheet" href="./css/header-footer-nav.css" />
     <link rel="stylesheet" href="./css/contact-me.css" />
   </head>
-
   <body>
     <div id="side-menu">
-      <div id="anchor-tags">
-        <a href="./index.html" id="index">HOME</a>
-        <a href="./degree-programme.html" id="degree-programme"
-          >MY DEGREE<br />PROGRAMME</a
-        >
-        <a href="./quiz.html" id="quiz">QUIZ PAGE</a>
-        <a href="./data.html" id="data">DATA/JS</a>
-        <a href="./contact-me.html" id="contact-me">CONTACT ME</a>
-        <a href="./accessibility.html" id="accessibility">ACCESSIBILITY</a>
-      </div>
+    </div>
+    <div id="anchor-tags">
+      <a href="./index.html" id="index">HOME</a>
+      <a href="./degree-programme.html" id="degree-programme"
+        >MY DEGREE<br />PROGRAMME</a
+      >
+      <a href="./quiz.html" id="quiz">QUIZ PAGE</a>
+      <a href="./data.html" id="data">DATA/JS</a>
+      <a href="./contact-me.html" id="contact-me">CONTACT ME</a>
+      <a href="./accessibility.html" id="accessibility">ACCESSIBILITY</a>
     </div>
     <header>
       <div id="menu-icon">
@@ -39,17 +38,12 @@
       <img id="logo" src="./img/logo_transparent.png" alt="logo" />
     </header>
     <main>
-      <section>
-        <img src="./img/temp.jpg" alt="temp.jpg" />
-        <h1>Lorem ipsum dolor</h1>
+      <section id="contact-details">
+        <h1>Contact Details:</h1>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+        Jedrzej Golebiewski
+        <br>
+        <a id="email" href="mailto:jgolebiewski1@sheffield.ac.uk">jgolebiewski1@sheffield.ac.uk</a>
         </p>
       </section>
     </main>
