body overflow:hidden during menu annd remove <br> from degree programme page title

--- a/degree-programme.html
+++ b/degree-programme.html
@@ -35,7 +35,7 @@
         <div id="line-2"></div>
         <div id="line-3"></div>
       </div>
-      <h1 id="page-title-info">DEGREE<br />PROGRAMME</h1>
+      <h1 id="page-title-info">DEGREE PROGRAMME</h1>
       <img id="logo" src="./img/logo_transparent.png" alt="logo" />
     </header>
     <main>
