--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a href="./degree-programme.html" id="degree-programme"
         >MY DEGREE<br />PROGRAMME</a
       >
-      <a href="./quiz.html" id="quiz">QUIZ PAGE</a>
+      <a href="./quiz.html" id="quiz">QUIZ</a>
       <a href="./data.html" id="data">DATA/JS</a>
       <a href="./contact-me.html" id="contact-me">CONTACT ME</a>
       <a href="./accessibility.html" id="accessibility">ACCESSIBILITY</a>
