Add basic quiz page placeholders

--- a/quiz.html
+++ b/quiz.html
@@ -39,17 +39,33 @@
     </header>
     <main>
       <section>
-        <img src="./img/temp.jpg" alt="temp.jpg" />
-        <h1>Lorem ipsum dolor</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+        <h1>Question no. 1</h1>
+        <h1 style="display: none;">Question no. 2</h1>
+        <h1 style="display: none;">Question no. 3</h1>
+        <img src="./img/quiz/1.jpg" alt="Quiz Picture 1">
+        <img src="./img/quiz/2.jpg" alt="Quiz Picture 2" style="display: none;">
+        <img src="./img/quiz/3.jpg" alt="Quiz Picture 3" style="display: none;">
+        <h2>Question no. 1</h1>
+        <h2 style="display: none;">Question no. 2</h1>
+        <h2 style="display: none;">Question no. 3</h1>
+        <div class="answers">
+          <p>Answer 1 Question 1</p>
+          <p>Answer 2 Question 1</p>
+          <p>Answer 3 Question 1</p>
+          <p>Answer 4 Question 1</p>
+        </div>
+        <div class="answers" style="display: none;">
+          <p>Answer 1 Question 2</p>
+          <p>Answer 2 Question 2</p>
+          <p>Answer 3 Question 2</p>
+          <p>Answer 4 Question 2</p>
+        </div>
+        <div class="answers" style="display: none;">
+          <p>Answer 1 Question 3</p>
+          <p>Answer 2 Question 3</p>
+          <p>Answer 3 Question 3</p>
+          <p>Answer 4 Question 3</p>
+        </div>
       </section>
     </main>
     <footer>
