--- a/index.html
+++ b/index.html
@@ -37,11 +37,7 @@
     <main>
       <section>
         <h1 id="welcome">Welcome!</h1>
-        <img
-          id="profile-picture"
-          src="./img/profile_picture.png"
-          alt="Picture Of Me"
-        />
+        <img id="profile-picture" src="./img/profile_picture.png" alt="Picture Of Me">
         <h2 id="name">Jedrzej Golebiewski</h1>
         <p>
           Yep. That's my name and this is my website :)
