Finish styling on quiz page and resolve z-index conflict with side menu

--- a/quiz.html
+++ b/quiz.html
@@ -38,6 +38,12 @@
       <img id="logo" src="./img/logo_transparent.png" alt="logo" />
     </header>
     <main>
+      <div id="left-button-nav">
+        <p><</p>
+      </div>
+      <div id="right-button-nav">
+        <p>></p>
+      </div>
       <section>
         <h1>Question no. 1</h1>
         <img src="./img/quiz/1.jpg" alt="Quiz Picture 1">
