Add right/wrong functionality

--- a/quiz.html
+++ b/quiz.html
@@ -46,7 +46,7 @@
       </div>
       <section>
         <h1>Question no. 1</h1>
-        <img src="./img/quiz/1.jpg" alt="Quiz Picture 1">
+        <img src="./img/quiz/1.jpg" alt="Quiz Picture">
         <h2>Question no. 1</h2>
         <div class="answers">
           <p>Answer 1 Question 1</p>
