Add noscript tag to all .html files and style

--- a/index.html
+++ b/index.html
@@ -58,5 +58,10 @@
     </footer>
     <script src="./js/header-footer-nav.js"></script>
     <script src="./js/index.js"></script>
+    <noscript>
+      <div id="page-blur">
+        <h1>This website requires javascript being enabled to run properly.</h1>
+      </div>
+    </noscript>
   </body>
 </html>
