--- a/accessibility.html
+++ b/accessibility.html
@@ -57,5 +57,10 @@
     </footer>
     <script src="./js/header-footer-nav.js"></script>
     <script src="./js/accessibility.js"></script>
+    <noscript>
+      <div id="page-blur">
+        <h1>This website requires javascript being enabled to run properly.</h1>
+      </div>
+    </noscript>
   </body>
 </html>
