--- a/contact-me.html
+++ b/contact-me.html
@@ -64,5 +64,10 @@
     </footer>
     <script src="./js/header-footer-nav.js"></script>
     <script src="./js/contact-me.js"></script>
+    <noscript>
+      <div id="page-blur">
+        <h1>This website requires javascript being enabled to run properly.</h1>
+      </div>
+    </noscript>
   </body>
 </html>
