Add question 1 data

--- a/quiz.html
+++ b/quiz.html
@@ -46,13 +46,13 @@
       </div>
       <section>
         <h1>Question no. 1</h1>
-        <img src="./img/quiz/1.jpg" alt="Quiz Picture">
-        <h2>Question no. 1</h2>
+        <img src="./img/quiz/quiz-1.jpg" alt="Quiz Picture">
+        <h2>What is this activation function called?</h2>
         <div class="answers">
-          <p>Answer 1 Question 1</p>
-          <p>Answer 2 Question 1</p>
-          <p>Answer 3 Question 1</p>
-          <p>Answer 4 Question 1</p>
+          <p>Leaky ReLU</p>
+          <p>Sigmoid</p>
+          <p>Tanh</p>
+          <p>ReLU</p>
         </div>
       </section>
     </main>
