Major layout changes in many files accounting for mobile-landscape orientation

--- a/index.html
+++ b/index.html
@@ -16,14 +16,26 @@
     <div id="side-menu">
     </div>
     <div id="anchor-tags">
-      <a href="./index.html" id="index">HOME</a>
-      <a href="./degree-programme.html" id="degree-programme"
+      <a href="./index.html" class="index">HOME</a>
+      <a href="./degree-programme.html" class="degree-programme"
         >MY DEGREE<br />PROGRAMME</a
       >
-      <a href="./quiz.html" id="quiz">QUIZ</a>
-      <a href="./data.html" id="data">DATA/JS</a>
-      <a href="./contact-me.html" id="contact-me">CONTACT ME</a>
-      <a href="./accessibility.html" id="accessibility">ACCESSIBILITY</a>
+      <a href="./quiz.html" class="quiz">QUIZ</a>
+      <a href="./data.html" class="data">DATA/JS</a>
+      <a href="./contact-me.html" class="contact-me">CONTACT ME</a>
+      <a href="./accessibility.html" class="accessibility">ACCESSIBILITY</a>
+    </div>
+    <div id="anchor-tags-left">
+      <a href="./index.html" class="index">HOME</a>
+      <a href="./degree-programme.html" class="degree-programme"
+        >MY DEGREE<br />PROGRAMME</a
+      >
+      <a href="./quiz.html" class="quiz">QUIZ</a>
+    </div>
+    <div id="anchor-tags-right">
+      <a href="./data.html" class="data">DATA/JS</a>
+      <a href="./contact-me.html" class="contact-me">CONTACT ME</a>
+      <a href="./accessibility.html" class="accessibility">ACCESSIBILITY</a>
     </div>
     <header>
       <div id="menu-icon">
