--- a/data.html
+++ b/data.html
@@ -41,6 +41,15 @@
       <a href="./accessibility.html" class="accessibility">ACCESSIBILITY</a>
     </div>
     <header>
+      <div id="menu-desktop">
+        <div id="menu-desktop-inner">
+          <h1>MENU</h1>
+          <div id="menu-desktop-arrow">
+            <div id="desktop-line-1"></div>
+            <div id="desktop-line-2"></div>
+          </div>
+        </div>
+      </div>
       <div id="menu-icon">
         <div id="line-1"></div>
         <div id="line-2"></div>
