--- a/quiz.html
+++ b/quiz.html
@@ -40,8 +40,20 @@
       <a href="./contact-me.html" class="contact-me">CONTACT ME</a>
       <a href="./accessibility.html" class="accessibility">ACCESSIBILITY</a>
     </div>
+    <div id="menu-desktop-anchor-tags">
+      <div id="menu-desktop-anchor-tags-inner">
+        <a href="./index.html" class="index">HOME</a>
+        <a href="./degree-programme.html" class="degree-programme"
+          >DEGREE<br />PROGRAMME</a
+        >
+        <a href="./quiz.html" class="quiz">QUIZ</a>
+        <a href="./data.html" class="data">DATA/JS</a>
+        <a href="./contact-me.html" class="contact-me">CONTACT ME</a>
+        <a href="./accessibility.html" class="accessibility">ACCESSIBILITY</a>
+      </div>
+    </div>
     <header>
-      <div id="menu-desktop">
+      <div id="menu-desktop-icon">
         <div id="menu-desktop-inner">
           <h1>MENU</h1>
           <div id="menu-desktop-arrow">
