--- a/degree-programme.html
+++ b/degree-programme.html
@@ -16,60 +16,58 @@
     <link rel="stylesheet" href="./css/degree-programme.css" />
   </head>
   <body>
-    <div id="side-menu">
-    </div>
-    <div id="anchor-tags">
+  <div id="side-menu">
+  </div>
+  <div id="anchor-tags">
+    <a href="./index.html" class="index">HOME</a>
+    <a href="./degree-programme.html" class="degree-programme">MY DEGREE<br/>PROGRAMME</a>
+    <a href="./quiz.html" class="quiz">QUIZ</a>
+    <a href="./data.html" class="data">DATA/JS</a>
+    <a href="./contact-me.html" class="contact-me">CONTACT ME</a>
+    <a href="./accessibility.html" class="accessibility">ACCESSIBILITY</a>
+  </div>
+  <div id="anchor-tags-left">
+    <a href="./index.html" class="index">HOME</a>
+    <a href="./degree-programme.html" class="degree-programme">MY DEGREE<br/>PROGRAMME</a>
+    <a href="./quiz.html" class="quiz">QUIZ</a>
+  </div>
+  <div id="anchor-tags-right">
+    <a href="./data.html" class="data">DATA/JS</a>
+    <a href="./contact-me.html" class="contact-me">CONTACT ME</a>
+    <a href="./accessibility.html" class="accessibility">ACCESSIBILITY</a>
+  </div>
+  <div id="menu-desktop-anchor-tags">
+    <div id="menu-desktop-anchor-tags-inner">
       <a href="./index.html" class="index">HOME</a>
-      <a href="./degree-programme.html" class="degree-programme"
-        >MY DEGREE<br />PROGRAMME</a
-      >
+      <a href="./degree-programme.html" class="degree-programme">DEGREE<br/>PROGRAMME</a>
       <a href="./quiz.html" class="quiz">QUIZ</a>
       <a href="./data.html" class="data">DATA/JS</a>
       <a href="./contact-me.html" class="contact-me">CONTACT ME</a>
       <a href="./accessibility.html" class="accessibility">ACCESSIBILITY</a>
     </div>
-    <div id="anchor-tags-left">
-      <a href="./index.html" class="index">HOME</a>
-      <a href="./degree-programme.html" class="degree-programme"
-        >MY DEGREE<br />PROGRAMME</a
-      >
-      <a href="./quiz.html" class="quiz">QUIZ</a>
+  </div>
+  <header id="mobile-tablet-header">
+    <div id="menu-icon">
+      <div id="line-1"></div>
+      <div id="line-2"></div>
+      <div id="line-3"></div>
     </div>
-    <div id="anchor-tags-right">
-      <a href="./data.html" class="data">DATA/JS</a>
-      <a href="./contact-me.html" class="contact-me">CONTACT ME</a>
-      <a href="./accessibility.html" class="accessibility">ACCESSIBILITY</a>
-    </div>
-    <div id="menu-desktop-anchor-tags">
-      <div id="menu-desktop-anchor-tags-inner">
-        <a href="./index.html" class="index">HOME</a>
-        <a href="./degree-programme.html" class="degree-programme"
-          >DEGREE<br />PROGRAMME</a
-        >
-        <a href="./quiz.html" class="quiz">QUIZ</a>
-        <a href="./data.html" class="data">DATA/JS</a>
-        <a href="./contact-me.html" class="contact-me">CONTACT ME</a>
-        <a href="./accessibility.html" class="accessibility">ACCESSIBILITY</a>
-      </div>
-    </div>
-    <header>
-      <div id="menu-desktop-icon">
-        <div id="menu-desktop-inner">
-          <h1>MENU</h1>
-          <div id="menu-desktop-arrow">
-            <div id="desktop-line-1"></div>
-            <div id="desktop-line-2"></div>
-          </div>
+    <h1 class="page-title-info" id="page-title-info-mobile">DEGREE PROGRAMME</h1>
+    <img class="logo" id="logo-mobile" src="./img/logo_transparent.png" alt="logo"/>
+  </header>
+  <header id="desktop-header">
+    <div id="menu-desktop-icon">
+      <div id="menu-desktop-inner">
+        <h1>MENU</h1>
+        <div id="menu-desktop-arrow">
+          <div id="desktop-line-1"></div>
+          <div id="desktop-line-2"></div>
         </div>
       </div>
-      <div id="menu-icon">
-        <div id="line-1"></div>
-        <div id="line-2"></div>
-        <div id="line-3"></div>
-      </div>
-      <h1 id="page-title-info">DEGREE PROGRAMME</h1>
-      <img id="logo" src="./img/logo_transparent.png" alt="logo" />
-    </header>
+    </div>
+    <h1 class="page-title-info" id="page-title-info-desktop">DEGREE PROGRAMME</h1>
+    <img class="logo" id="logo-desktop" src="./img/logo_transparent.png" alt="logo"/>
+  </header>
     <main>
       <section>
         <img src="./img/temp.jpg" alt="temp.jpg" />
@@ -91,7 +89,7 @@
     <script src="./js/header-footer-nav.js"></script>
     <script src="./js/degree-programme.js"></script>
     <noscript>
-      <div id="page-blur">
+      <div id="page-hide">
         <h1>This website requires javascript being enabled to run properly.</h1>
       </div>
     </noscript>
