--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
     </div>
     <div id="anchor-tags">
       <a href="./index.html" class="index">HOME</a>
-      <a href="./degree-programme.html" class="degree-programme"
-        >MY DEGREE<br />PROGRAMME</a
-      >
+      <a href="./degree-programme.html" class="degree-programme">MY DEGREE<br/>PROGRAMME</a>
       <a href="./quiz.html" class="quiz">QUIZ</a>
       <a href="./data.html" class="data">DATA/JS</a>
       <a href="./contact-me.html" class="contact-me">CONTACT ME</a>
@@ -27,9 +25,7 @@
     </div>
     <div id="anchor-tags-left">
       <a href="./index.html" class="index">HOME</a>
-      <a href="./degree-programme.html" class="degree-programme"
-        >MY DEGREE<br />PROGRAMME</a
-      >
+      <a href="./degree-programme.html" class="degree-programme">MY DEGREE<br/>PROGRAMME</a>
       <a href="./quiz.html" class="quiz">QUIZ</a>
     </div>
     <div id="anchor-tags-right">
@@ -40,16 +36,23 @@
     <div id="menu-desktop-anchor-tags">
       <div id="menu-desktop-anchor-tags-inner">
         <a href="./index.html" class="index">HOME</a>
-        <a href="./degree-programme.html" class="degree-programme"
-          >DEGREE<br />PROGRAMME</a
-        >
+        <a href="./degree-programme.html" class="degree-programme">DEGREE<br/>PROGRAMME</a>
         <a href="./quiz.html" class="quiz">QUIZ</a>
         <a href="./data.html" class="data">DATA/JS</a>
         <a href="./contact-me.html" class="contact-me">CONTACT ME</a>
         <a href="./accessibility.html" class="accessibility">ACCESSIBILITY</a>
       </div>
     </div>
-    <header>
+    <header id="mobile-tablet-header">
+      <div id="menu-icon">
+        <div id="line-1"></div>
+        <div id="line-2"></div>
+        <div id="line-3"></div>
+      </div>
+      <h1 class="page-title-info" id="page-title-info-mobile">HOME</h1>
+      <img class="logo" id="logo-mobile" src="./img/logo_transparent.png" alt="logo"/>
+    </header>
+    <header id="desktop-header">
       <div id="menu-desktop-icon">
         <div id="menu-desktop-inner">
           <h1>MENU</h1>
@@ -59,13 +62,8 @@
           </div>
         </div>
       </div>
-      <div id="menu-icon">
-        <div id="line-1"></div>
-        <div id="line-2"></div>
-        <div id="line-3"></div>
-      </div>
-      <h1 id="page-title-info">HOME</h1>
-      <img id="logo" src="./img/logo_transparent.png" alt="logo" />
+      <h1 class="page-title-info" id="page-title-info-desktop">HOME</h1>
+      <img class="logo" id="logo-desktop" src="./img/logo_transparent.png" alt="logo"/>
     </header>
     <main>
       <section>
@@ -92,7 +90,7 @@
     <script src="./js/header-footer-nav.js"></script>
     <script src="./js/index.js"></script>
     <noscript>
-      <div id="page-blur">
+      <div id="page-hide">
         <h1>This website requires javascript being enabled to run properly.</h1>
       </div>
     </noscript>
