change main padding to look better at different breakpoints & change lineheight

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <img class="about-me-image" src="./img/neural_network.png" alt="Image Of Neural Network">
         <img class="about-me-image" src="./img/HTML_tag.png" alt="Image Of HTML Tag">
       </div>
-        <p>
+        <p id="about-me-paragraph">
           I'm a first year AI & Computer Science student at The University Of Sheffield.
           Technology and science together with business are only some of the many things that I'm passionate about.
           In my free time I love to play chess and develop computer software.
