place arrows next to img on quiz page

--- a/quiz.html
+++ b/quiz.html
@@ -69,15 +69,17 @@
       <img class="logo" id="logo-desktop" src="./img/logo_transparent.png" alt="logo"/>
     </header>
     <main>
-      <div id="left-button-nav">
-        <p><</p>
-      </div>
-      <div id="right-button-nav">
-        <p>></p>
-      </div>
       <section>
         <h1>Question no. 1</h1>
-        <img src="./img/quiz/quiz-1.jpg" alt="Quiz Picture">
+        <div id="img-wrap">
+          <div id="left-button-nav">
+            <p><</p>
+          </div>
+          <div id="right-button-nav">
+            <p>></p>
+          </div>
+          <img src="./img/quiz/quiz-1.jpg" alt="Quiz Picture">
+        </div>
         <h2>What is this activation function called?</h2>
         <div class="answers">
           <p>Leaky ReLU</p>
