add mobile nav system to degree programme page

--- a/degree-programme.html
+++ b/degree-programme.html
@@ -69,19 +69,192 @@
     <img class="logo" id="logo-desktop" src="./img/logo_transparent.png" alt="logo"/>
   </header>
     <main>
-      <section>
-        <img src="./img/temp.jpg" alt="temp.jpg" />
-        <h1>Lorem ipsum dolor</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-      </section>
+      <div id="mobile">
+        <section id="mobile-module-1">
+          <div id="mobile-module-1-title" class="mobile-title first">
+            <div class="mobile-title-inner">
+              <h1>COM1001</h1>
+              <div class="mobile-title-inner-arrow">
+                <div class="mobile-title-inner-line-1"></div>
+                <div class="mobile-title-inner-line-2"></div>
+              </div>
+            </div>
+          </div>
+          <div id="mobile-module-1-description" class="mobile-description">
+            <div class="mobile-desciption-inner">
+              <h1>Lorem ipsum dolor</h1>
+              <img src="./img/temp.jpg" alt="temp.jpg" />
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercit
+                 ation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute iru
+                 re dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pari
+                 atur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mol
+                 lit anim id est laborum.</p>
+            </div>
+          </div>
+        </section>
+        <section id="mobile-module-2">
+          <div id="mobile-module-2-title" class="mobile-title">
+            <div class="mobile-title-inner">
+              <h1>COM1002</h1>
+              <div class="mobile-title-inner-arrow">
+                <div class="mobile-title-inner-line-1"></div>
+                <div class="mobile-title-inner-line-2"></div>
+              </div>
+            </div>
+          </div>
+          <div id="mobile-module-2-description" class="mobile-description">
+            <div class="mobile-desciption-inner">
+              <h1>Lorem ipsum dolor</h1>
+              <img src="./img/temp.jpg" alt="temp.jpg" />
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercit
+                 ation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute iru
+                 re dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pari
+                 atur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mol
+                 lit anim id est laborum.</p>
+            </div>
+          </div>
+        </section>
+        <section id="mobile-module-3">
+          <div id="mobile-module-3-title" class="mobile-title">
+            <div class="mobile-title-inner">
+              <h1>COM1003</h1>
+              <div class="mobile-title-inner-arrow">
+                <div class="mobile-title-inner-line-1"></div>
+                <div class="mobile-title-inner-line-2"></div>
+              </div>
+            </div>
+          </div>
+          <div id="mobile-module-3-description" class="mobile-description">
+            <div class="mobile-desciption-inner">
+              <h1>Lorem ipsum dolor</h1>
+              <img src="./img/temp.jpg" alt="temp.jpg" />
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercit
+                 ation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute iru
+                 re dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pari
+                 atur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mol
+                 lit anim id est laborum.</p>
+            </div>
+          </div>
+        </section>
+        <section id="mobile-module-4">
+          <div id="mobile-module-4-title" class="mobile-title">
+            <div class="mobile-title-inner">
+              <h1>COM1005</h1>
+              <div class="mobile-title-inner-arrow">
+                <div class="mobile-title-inner-line-1"></div>
+                <div class="mobile-title-inner-line-2"></div>
+              </div>
+            </div>
+          </div>
+          <div id="mobile-module-4-description" class="mobile-description">
+            <div class="mobile-desciption-inner">
+              <h1>Lorem ipsum dolor</h1>
+              <img src="./img/temp.jpg" alt="temp.jpg" />
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercit
+                 ation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute iru
+                 re dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pari
+                 atur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mol
+                 lit anim id est laborum.</p>
+            </div>
+          </div>
+        </section>
+        <section id="mobile-module-5">
+          <div id="mobile-module-5-title" class="mobile-title">
+            <div class="mobile-title-inner">
+              <h1>COM1008</h1>
+              <div class="mobile-title-inner-arrow">
+                <div class="mobile-title-inner-line-1"></div>
+                <div class="mobile-title-inner-line-2"></div>
+              </div>
+            </div>
+          </div>
+          <div id="mobile-module-5-description" class="mobile-description">
+            <div class="mobile-desciption-inner">
+              <h1>Lorem ipsum dolor</h1>
+              <img src="./img/temp.jpg" alt="temp.jpg" />
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercit
+                 ation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute iru
+                 re dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pari
+                 atur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mol
+                 lit anim id est laborum.</p>
+            </div>
+          </div>
+        </section>
+        <section id="mobile-module-6">
+          <div id="mobile-module-6-title" class="mobile-title">
+            <div class="mobile-title-inner">
+              <h1>COM1009</h1>
+              <div class="mobile-title-inner-arrow">
+                <div class="mobile-title-inner-line-1"></div>
+                <div class="mobile-title-inner-line-2"></div>
+              </div>
+            </div>
+          </div>
+          <div id="mobile-module-6-description" class="mobile-description">
+            <div class="mobile-desciption-inner">
+              <h1>Lorem ipsum dolor</h1>
+              <img src="./img/temp.jpg" alt="temp.jpg" />
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercit
+                 ation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute iru
+                 re dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pari
+                 atur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mol
+                 lit anim id est laborum.</p>
+            </div>
+          </div>
+        </section>
+        <section id="mobile-module-7">
+          <div id="mobile-module-7-title" class="mobile-title">
+            <div class="mobile-title-inner">
+              <h1>FCE1001</h1>
+              <div class="mobile-title-inner-arrow">
+                <div class="mobile-title-inner-line-1"></div>
+                <div class="mobile-title-inner-line-2"></div>
+              </div>
+            </div>
+          </div>
+          <div id="mobile-module-7-description" class="mobile-description">
+            <div class="mobile-desciption-inner">
+              <h1>Lorem ipsum dolor</h1>
+              <img src="./img/temp.jpg" alt="temp.jpg" />
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercit
+                 ation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute iru
+                 re dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pari
+                 atur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mol
+                 lit anim id est laborum.</p>
+            </div>
+          </div>
+        </section>
+        <section id="mobile-module-8">
+          <div id="mobile-module-8-title" class="mobile-title last">
+            <div class="mobile-title-inner">
+              <h1>PSY1002</h1>
+              <div class="mobile-title-inner-arrow">
+                <div class="mobile-title-inner-line-1"></div>
+                <div class="mobile-title-inner-line-2"></div>
+              </div>
+            </div>
+          </div>
+          <div id="mobile-module-8-description" class="mobile-description last">
+            <div class="mobile-desciption-inner">
+              <h1>Lorem ipsum dolor</h1>
+              <img src="./img/temp.jpg" alt="temp.jpg" />
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercit
+                 ation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute iru
+                 re dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pari
+                 atur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mol
+                 lit anim id est laborum.</p>
+            </div>
+          </div>
+        </section>
+      </div>
     </main>
     <footer>
       <p id="copyright">© Jedrzej Golebiewski</p>
