--- a/degree-programme.html
+++ b/degree-programme.html
@@ -69,11 +69,12 @@
     <img class="logo" id="logo-desktop" src="./img/logo_transparent.png" alt="logo"/>
   </header>
     <main>
+      <h1 id="prefix">My year 1 modules:</h1>
       <div id="mobile">
         <section id="mobile-module-1">
           <div id="mobile-module-1-title" class="mobile-title first">
             <div class="mobile-title-inner">
-              <h1>COM1001</h1>
+              <h2>COM1001</h2>
               <div class="mobile-title-inner-arrow">
                 <div class="mobile-title-inner-line-1"></div>
                 <div class="mobile-title-inner-line-2"></div>
@@ -82,7 +83,7 @@
           </div>
           <div id="mobile-module-1-description" class="mobile-description">
             <div class="mobile-desciption-inner">
-              <h1>Lorem ipsum dolor</h1>
+              <h1>Introduction to Software Engineering</h1>
               <img src="./img/temp.jpg" alt="temp.jpg" />
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                  dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercit
@@ -96,7 +97,7 @@
         <section id="mobile-module-2">
           <div id="mobile-module-2-title" class="mobile-title">
             <div class="mobile-title-inner">
-              <h1>COM1002</h1>
+              <h2>COM1002</h2>
               <div class="mobile-title-inner-arrow">
                 <div class="mobile-title-inner-line-1"></div>
                 <div class="mobile-title-inner-line-2"></div>
@@ -119,7 +120,7 @@
         <section id="mobile-module-3">
           <div id="mobile-module-3-title" class="mobile-title">
             <div class="mobile-title-inner">
-              <h1>COM1003</h1>
+              <h2>COM1003</h2>
               <div class="mobile-title-inner-arrow">
                 <div class="mobile-title-inner-line-1"></div>
                 <div class="mobile-title-inner-line-2"></div>
@@ -142,7 +143,7 @@
         <section id="mobile-module-4">
           <div id="mobile-module-4-title" class="mobile-title">
             <div class="mobile-title-inner">
-              <h1>COM1005</h1>
+              <h2>COM1005</h2>
               <div class="mobile-title-inner-arrow">
                 <div class="mobile-title-inner-line-1"></div>
                 <div class="mobile-title-inner-line-2"></div>
@@ -165,7 +166,7 @@
         <section id="mobile-module-5">
           <div id="mobile-module-5-title" class="mobile-title">
             <div class="mobile-title-inner">
-              <h1>COM1008</h1>
+              <h2>COM1008</h2>
               <div class="mobile-title-inner-arrow">
                 <div class="mobile-title-inner-line-1"></div>
                 <div class="mobile-title-inner-line-2"></div>
@@ -188,7 +189,7 @@
         <section id="mobile-module-6">
           <div id="mobile-module-6-title" class="mobile-title">
             <div class="mobile-title-inner">
-              <h1>COM1009</h1>
+              <h2>COM1009</h2>
               <div class="mobile-title-inner-arrow">
                 <div class="mobile-title-inner-line-1"></div>
                 <div class="mobile-title-inner-line-2"></div>
@@ -211,7 +212,7 @@
         <section id="mobile-module-7">
           <div id="mobile-module-7-title" class="mobile-title">
             <div class="mobile-title-inner">
-              <h1>FCE1001</h1>
+              <h2>FCE1001</h2>
               <div class="mobile-title-inner-arrow">
                 <div class="mobile-title-inner-line-1"></div>
                 <div class="mobile-title-inner-line-2"></div>
@@ -234,7 +235,7 @@
         <section id="mobile-module-8">
           <div id="mobile-module-8-title" class="mobile-title last">
             <div class="mobile-title-inner">
-              <h1>PSY1002</h1>
+              <h2>PSY1002</h2>
               <div class="mobile-title-inner-arrow">
                 <div class="mobile-title-inner-line-1"></div>
                 <div class="mobile-title-inner-line-2"></div>
