add module titles & link to more info

--- a/degree-programme.html
+++ b/degree-programme.html
@@ -84,6 +84,7 @@
           <div id="mobile-module-1-description" class="mobile-description">
             <div class="mobile-desciption-inner">
               <h1>Introduction to Software Engineering</h1>
+              <h2>ACADEMIC YEAR 2020-21</h2>
               <img src="./img/temp.jpg" alt="temp.jpg" />
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                  dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercit
@@ -106,7 +107,8 @@
           </div>
           <div id="mobile-module-2-description" class="mobile-description">
             <div class="mobile-desciption-inner">
-              <h1>Lorem ipsum dolor</h1>
+              <h1>Foundations of Computer Science</h1>
+              <h2>ACADEMIC YEAR 2020-21</h2>
               <img src="./img/temp.jpg" alt="temp.jpg" />
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                  dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercit
@@ -129,7 +131,8 @@
           </div>
           <div id="mobile-module-3-description" class="mobile-description">
             <div class="mobile-desciption-inner">
-              <h1>Lorem ipsum dolor</h1>
+              <h1>Java Programming</h1>
+              <h2>ACADEMIC YEAR 2020-21</h2>
               <img src="./img/temp.jpg" alt="temp.jpg" />
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                  dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercit
@@ -152,7 +155,8 @@
           </div>
           <div id="mobile-module-4-description" class="mobile-description">
             <div class="mobile-desciption-inner">
-              <h1>Lorem ipsum dolor</h1>
+              <h1>Machines and Intelligence</h1>
+              <h2>ACADEMIC YEAR 2020-21</h2>
               <img src="./img/temp.jpg" alt="temp.jpg" />
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                  dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercit
@@ -175,7 +179,8 @@
           </div>
           <div id="mobile-module-5-description" class="mobile-description">
             <div class="mobile-desciption-inner">
-              <h1>Lorem ipsum dolor</h1>
+              <h1>Web and Internet Technology</h1>
+              <h2>AUTUMN 2020-21</h2>
               <img src="./img/temp.jpg" alt="temp.jpg" />
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                  dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercit
@@ -198,7 +203,8 @@
           </div>
           <div id="mobile-module-6-description" class="mobile-description">
             <div class="mobile-desciption-inner">
-              <h1>Lorem ipsum dolor</h1>
+              <h1>Introduction to Algorithms and Data Structures</h1>
+              <h2>SPRING 2020-21</h2>
               <img src="./img/temp.jpg" alt="temp.jpg" />
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                  dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercit
@@ -221,7 +227,8 @@
           </div>
           <div id="mobile-module-7-description" class="mobile-description">
             <div class="mobile-desciption-inner">
-              <h1>Lorem ipsum dolor</h1>
+              <h1>Global Engineering Challenge Week</h1>
+              <h2>AUTUMN 2020-21</h2>
               <img src="./img/temp.jpg" alt="temp.jpg" />
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                  dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercit
@@ -244,7 +251,8 @@
           </div>
           <div id="mobile-module-8-description" class="mobile-description last">
             <div class="mobile-desciption-inner">
-              <h1>Lorem ipsum dolor</h1>
+              <h1>Cognitive Psychology</h1>
+              <h2>ACADEMIC YEAR 2020-21</h2>
               <img src="./img/temp.jpg" alt="temp.jpg" />
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                  dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercit
@@ -256,6 +264,9 @@
           </div>
         </section>
       </div>
+      <p id="more-info">More information available here:<br>
+        <a href="https://www.sheffield.ac.uk/programmeregulationsfinder/programme?code=COMU119&org=SHEFFIELD&start=24-Sep-2018&moa=FT&year=2020">PROGRAMME INFORMATION</a>
+      </p>
     </main>
     <footer>
       <p id="copyright">© Jedrzej Golebiewski</p>
